# TheoryOfImageRecognition

./: .gitignore  README.md
lab_1/src/: main.cpp
lab_10/files/: A.txt  file.txt
lab_10/src/: first.cpp  second.cpp
lab_11/src/: main.cpp
lab_2/src/: main.cpp
lab_3/src/: main.cpp
lab_4/src/: main.cpp
lab_5/src/: main.cpp
lab_6/: CMakeLists.txt  main.cpp
lab_7/: CMakeLists.txt  main.cpp
